[tool.poetry]
name = "qss"
version = "v0.0.14"
description = "QuestDB State Storage (QSS) for Home Assistant"
authors = ["CM000n"]
keywords = [
  "homeassistant",
  "questdb",
  "database",
  "timeseries",
  "analytics",
  "storage",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
homeassistant = "^2025"
questdb = "^2.0.3"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
voluptuous-stubs = "^0.1"
homeassistant-stubs = "^2025"
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    # Ruff specific
    "RUF",
    # Pylint
    "PL",
    # Pyflakes
    "F",
    # pep8-naming
    "N",
    # Pycodestyle
    "E",
    "W",
    "D",
    # flake8-2020
    "YTT",
    # flake8-async
    "ASYNC",
    # flake8-bugbear
    "B",
    # flake8-unused-arguments
    "ARG",
    # flake8-commas
    "COM",
    # Isort
    "I"
]
extend-ignore = ["PLR2004", "D203", "D213", "COM812"]

[tool.ruff.format]
docstring-code-format = true
