[project]
name = "qss"
description = "QuestDB State Storage (QSS) for Home Assistant"
license = "MIT"
keywords = [
  "homeassistant",
  "questdb",
  "database",
  "timeseries",
  "analytics",
  "storage",
]
dynamic = ["version", "dependencies"]
readme = "README.md"
authors = [{name = "CM000n"}]
requires-python = '>=3.12,<3.14'

[tool.poetry]
version = "v0.0.16"
package-mode = false
requires-poetry = '>=2.0,<3.0'

[tool.poetry.dependencies]
homeassistant = "^2025"
questdb = "^2.0.4"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
voluptuous-stubs = "^0.1"
homeassistant-stubs = "^2025"
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = true
lint.exclude = ["tests/**"]
lint.select = ["ALL"]
lint.extend-ignore = ["D203", "D213", "COM812"]
lint.pydocstyle.convention = "google"
lint.isort.split-on-trailing-comma = false
format.docstring-code-format = true
format.skip-magic-trailing-comma = true
